# Eunomia-ISSTA23

./: README.md
engine/: README.md  launcher.py
engine/eunomia/arch/wasm/: configuration.py  disassembler.py  emulator.py  graph.py  memory.py  vmstate.py
engine/eunomia/arch/wasm/instructions/: ControlInstructions.py
engine/eunomia/arch/wasm/lib/: go_lib.py  utils.py
engine/log/result/collatz_2022-12-22 15:45:52/: command.json
engine/log/result/collatz_2022-12-22 16:22:56/: state_1671697377.327.json  state_1671697377.737.json  state_1671697378.834.json  state_1671697378.913.json
engine/log/result/collatz_2022-12-22 16:47:46/: state_1671698953.678.json
engine/log/result/collatz_2022-12-22 19:45:23/: command.json
engine/log/result/collatz_2022-12-22 21:25:12/: state_1671715525.470.json
engine/test/: hello_world_rust.wat
parser/: CMakeLists.txt  README.md  global.h  main.cpp  out  parse.sh  trans.h
parser/grammar/: NavSLexer.cpp  NavSLexer.g4  NavSLexer.h  NavSLexer.interp  NavSParser.cpp  NavSParser.g4  NavSParser.h  NavSParser.interp  NavSParser.tokens  NavSParserBaseListener.cpp  NavSParserBaseListener.h  NavSParserListener.cpp  NavSParserListener.h
parser/testcases/: .dnstracer_klee.c.swp  a.out  collatz  collatz.c  collatz.ll  collatz.ll.stmt  collatz.wasm  collatz.wat  collectionsc  collectionsc.c  collectionsc.ll  collectionsc.ll.stmt  collectionsc.wasm  collectionsc.wat  dnstracer  dnstracer.c  dnstracer.ll  dnstracer.ll.stmt  dnstracer.wasm  dnstracer.wat  dnstracer_klee.bc  dnstracer_klee.c  gocr.c  gocr.ll  gocr.wasm  gocr.wat  gocr_simplify.c  test.ll  test.ll.stmt  tmp.c
